# ChangeLog for media-libs/lv2
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/lv2/ChangeLog,v 1.3 2012/05/22 15:37:39 johu Exp $

  22 May 2012; Johannes Huber <johu@gentoo.org> lv2-1.0.0.ebuild:
  Add ~x86 wrt bug #413033

  05 May 2012; Jeff Horelick <jdhore@gentoo.org> lv2-1.0.0.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

*lv2-1.0.0 (21 Apr 2012)

  21 Apr 2012; Alexis Ballier <aballier@gentoo.org> +lv2-1.0.0.ebuild,
  +metadata.xml:
  initial import, ebuild by me
