@@ -1,18 +1,16 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
-DIST lv2-1.0.0.tar.bz2 385111 RMD160 31e7ae14b5b476fda4b61cc5dbb17431229fa999 SHA1 ac6ec01a2eef8e3152af0fe8d6a1d77ad45a1f08 SHA256 857ec8c1b1f803409e57b84f75b0f8ae7477a9c6bccb4a66220d739e8e39d751
-EBUILD lv2-1.0.0.ebuild 891 RMD160 5608af913d3baf56ef0f7fad1931be1d6b1900c3 SHA1 bdf41f5ab47047f49d0242fd7f2ef9abb46f4832 SHA256 cb02b728c2824c5a6188faaa35074cf38566fd7217f4bfcdaa521c9935748b08
-MISC ChangeLog 549 RMD160 0f649ecf5974e149b6abbe76cb03479c65a60d24 SHA1 e4ca42be4b4c342ae626246f316510d8396a5f90 SHA256 6dc12837ddf3511f8218580a07412d011a0523bbabbe92f90ab21122a43f6ac3
-MISC metadata.xml 235 RMD160 f9c7dc90d21f33019f97edc13aaa1cb95ef8c3e6 SHA1 d2fcf8baedaad001ca25ae1d9f7b3020409330f3 SHA256 1d429ce13850c686a37903a9117f89c58f4f9708d1a898923b23fce7bfb82813
+DIST lv2-1.0.0.tar.bz2 385111 SHA256 857ec8c1b1f803409e57b84f75b0f8ae7477a9c6bccb4a66220d739e8e39d751 SHA512 55ca412ca748f269785e5e1afcfab4dead8fbf0bbda351b6a212540aa930e8281c767fefddfcdbc162216ec045ad906c6d00a98ba74e924c9aedc6b1773f6284 WHIRLPOOL 0e0b4f38d2775f828f2ec94819c8abcd466831d964ad37f5a17facaefb2932a2f24d77a6ec4ae46f030c3af0c44cb255e632deeab9de74c6aa170f35dc3d02a3
+DIST lv2-1.2.0.tar.bz2 369024 SHA256 0528d2c7ee25831e48815b3fcca4328de5ce444fa59bdceed01ae94779942072 SHA512 c62afe7be498eaa3fb4b0b07e13f9ac0644b62d4c713743373761243990f0a8533e3e8d0c797b3613c779e201f37bf0ba273233953cbad8d617653611ea054c9 WHIRLPOOL 93fc7bba7b1f2ed83315e47723f1b780f55be6fe6acd29b409c45d0e66c06ab6e895fc8b87297d2e18454e34ca9bc39fcf56cf0fecb06d62c1849af866176aeb
+EBUILD lv2-1.0.0.ebuild 891 SHA256 cb02b728c2824c5a6188faaa35074cf38566fd7217f4bfcdaa521c9935748b08 SHA512 c9b7b50c8aa4080ba9b7df4a497bc9639f9b9c1271ec6ae39a86b85c8fa49082c203568d06092de708f3b12bc9b57f6b761f7e3076618a5d3193b6358fd1d0c1 WHIRLPOOL 07c4ed213f1503110f6a0dc79618b26e4bb3fc548dc5cbed1bda0e330a8f4bd6084673cd0148cec009b1a3e72cc66d2524329b0a356d3b5b136c42c0cb730185
+EBUILD lv2-1.2.0.ebuild 895 SHA256 1c95d8758a2deeb2923ffd6a3446ea4772497a42747cf5c78691ac0edb84a4a2 SHA512 49bd82cf2a4cfaf264b4fbe82506f82014c8eb2c0c51f6c492b07d86416f92b2a36f22b3e07902b896e8d31370843c611d329b91534a312b1ace516edc8dab94 WHIRLPOOL 0fc7c361dff12ee91ef1b875d48622121a3762e01a359fbd84dc3bde119b759ae2b437e16d9b2cb5068cfe3a46c062be91ef4ec58390427cd2cd160ab42eeb02
+MISC ChangeLog 666 SHA256 1d76c6e5a7a6d4e6449e9fb36d2bd8561bd583db32c173fc9240001d35ce077b SHA512 5d812fdb71ccaf6f6a943b87c4b16b834c4fc1c839383a1a6a2c343490c5f3eca36c6ac6131af02d1a1cbab4eaa746f05574b275dcfe28bcef948f6fed646250 WHIRLPOOL ee216ec289e8d967d900fc4808a686a1afb23981768f2fa7bede3b520100902a1910f7803b186fb8558d1808a1eb98ab851a5b81318cc9b5b7ed831f35496188
+MISC metadata.xml 235 SHA256 1d429ce13850c686a37903a9117f89c58f4f9708d1a898923b23fce7bfb82813 SHA512 855695249e030bb39f6e750107e41fe6d8becd935d8ad664b60b3f7da6ce5e3ea7dc9f6dc46ba9b303704597fe00e2ab03e83574e140aadae0dfa28bfb3a7b41 WHIRLPOOL dcb69c3bfa14c5ea5388ed8a4963ca878a137aa9becf00978c538e131c2d05f080a0e17d1452e747f2f2b310e6ccd87c8647147f6b24d09bf4acfb2d140d56c7
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.18 (GNU/Linux)
+Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQEcBAEBCgAGBQJPu7MzAAoJEO+t9ga+3I3atoIH/2padUU25UxwtfJolv7Cdw2h
-2XV4YGOD5DXyTxKG9ktQEQhH8pYSLgyHJ0YocOx5EwaQRMb2+SGHalSCyX5Wg8yY
-AlXlnD+pbZh5f+5stdxDS5Z6hToaecOHSnMEDTW4aqvsgr+9Q8NTgSU8CPqeIwNf
-hzGNj4rzHOXj/chm4Dy71R91/k+6yX8AQMGINUobUZAb3HBukPxZICwoZKRRDuau
-XFvR/81GZ/YJv07ItBl+BAhgqYkndGkigxotc4VO/L/MFsexssj7LBhT9BEZGr4T
-Rh6XMdm5UD0ZSUMdq2MQXUw1vf58YjjrBsDwQJ39NMXbJabOd9Bvt8YY+/CQhMA=
-=A6K4
+iEYEAREIAAYFAlB8jXIACgkQvFcC4BYPU0pYWgCgv7Dcda66yVh/CnmjQfAQslyb
+mvEAoMhefn8i64E56ZSPH2+KmEQLMLRu
+=JHwK
 -----END PGP SIGNATURE-----
